--- a/tests/_log/report.html
+++ b/tests/_log/report.html
@@ -185,12 +185,12 @@
 
    <tr>
     <td>
-     <p class="scenarioSuccess" onclick="showHide('6', this)">[+] test it adds themes files (0.01s)</p>
+     <p class="scenarioSkipped" onclick="showHide('6', this)">[+] test it adds themes files (0.01s)</p>
     </td>
    </tr>
    <tr>
     <td>
-     <table border="0" width="100%" class="scenarioSuccess scenarioStepsTable" id="stepContainer6">
+     <table border="0" width="100%" class="scenarioSkipped scenarioStepsTable" id="stepContainer6">
 
      </table>
     </td>
@@ -224,12 +224,12 @@
 
    <tr>
     <td>
-     <p class="scenarioSuccess" onclick="showHide('9', this)">[+] test theme asset returns correct path (0s)</p>
+     <p class="scenarioSkipped" onclick="showHide('9', this)">[+] test theme asset returns correct path (0.01s)</p>
     </td>
    </tr>
    <tr>
     <td>
-     <table border="0" width="100%" class="scenarioSuccess scenarioStepsTable" id="stepContainer9">
+     <table border="0" width="100%" class="scenarioSkipped scenarioStepsTable" id="stepContainer9">
 
      </table>
     </td>
@@ -237,7 +237,7 @@
 
    <tr>
     <td>
-     <p class="scenarioSuccess" onclick="showHide('10', this)">[+] test functional (0.04s)</p>
+     <p class="scenarioSuccess" onclick="showHide('10', this)">[+] test functional (0.03s)</p>
     </td>
    </tr>
    <tr>
@@ -302,12 +302,12 @@
 
    <tr>
     <td>
-     <p class="scenarioSuccess" onclick="showHide('15', this)">[+] test it loads dependencies on activated theme (0.04s)</p>
+     <p class="scenarioSkipped" onclick="showHide('15', this)">[+] test it loads dependencies on activated theme (0.01s)</p>
     </td>
    </tr>
    <tr>
     <td>
-     <table border="0" width="100%" class="scenarioSuccess scenarioStepsTable" id="stepContainer15">
+     <table border="0" width="100%" class="scenarioSkipped scenarioStepsTable" id="stepContainer15">
 
      </table>
     </td>
@@ -315,12 +315,12 @@
 
    <tr>
     <td>
-     <p class="scenarioSuccess" onclick="showHide('16', this)">[+] test it throws exception on unknown package (0.01s)</p>
+     <p class="scenarioSkipped" onclick="showHide('16', this)">[+] test it throws exception on unknown package (0.01s)</p>
     </td>
    </tr>
    <tr>
     <td>
-     <table border="0" width="100%" class="scenarioSuccess scenarioStepsTable" id="stepContainer16">
+     <table border="0" width="100%" class="scenarioSkipped scenarioStepsTable" id="stepContainer16">
 
      </table>
     </td>
@@ -328,12 +328,12 @@
 
    <tr>
     <td>
-     <p class="scenarioSuccess" onclick="showHide('17', this)">[+] test it throws exception on wrong version (0.02s)</p>
+     <p class="scenarioSkipped" onclick="showHide('17', this)">[+] test it throws exception on wrong version (0.01s)</p>
     </td>
    </tr>
    <tr>
     <td>
-     <table border="0" width="100%" class="scenarioSuccess scenarioStepsTable" id="stepContainer17">
+     <table border="0" width="100%" class="scenarioSkipped scenarioStepsTable" id="stepContainer17">
 
      </table>
     </td>
@@ -367,7 +367,7 @@
 
    <tr>
     <td>
-     <p class="scenarioSuccess" onclick="showHide('20', this)">[+] test get package thrown exception on bad version (0.01s)</p>
+     <p class="scenarioSuccess" onclick="showHide('20', this)">[+] test get package thrown exception on bad version (0.02s)</p>
     </td>
    </tr>
    <tr>
@@ -380,7 +380,7 @@
 
    <tr>
     <td>
-     <p class="scenarioSuccess" onclick="showHide('21', this)">[+] test load package loads package assets (0.03s)</p>
+     <p class="scenarioSuccess" onclick="showHide('21', this)">[+] test load package loads package assets (0.04s)</p>
     </td>
    </tr>
    <tr>
@@ -393,12 +393,12 @@
 
    <tr>
     <td>
-     <p class="scenarioSuccess" onclick="showHide('22', this)">[+] test it skips checked theme (0.02s)</p>
+     <p class="scenarioSkipped" onclick="showHide('22', this)">[+] test it skips checked theme (0.02s)</p>
     </td>
    </tr>
    <tr>
     <td>
-     <table border="0" width="100%" class="scenarioSuccess scenarioStepsTable" id="stepContainer22">
+     <table border="0" width="100%" class="scenarioSkipped scenarioStepsTable" id="stepContainer22">
 
      </table>
     </td>
@@ -406,12 +406,12 @@
 
    <tr>
     <td>
-     <p class="scenarioSuccess" onclick="showHide('23', this)">[+] test it skips loading if theme has not any dependencies (0.02s)</p>
+     <p class="scenarioSkipped" onclick="showHide('23', this)">[+] test it skips loading if theme has not any dependencies (0.02s)</p>
     </td>
    </tr>
    <tr>
     <td>
-     <table border="0" width="100%" class="scenarioSuccess scenarioStepsTable" id="stepContainer23">
+     <table border="0" width="100%" class="scenarioSkipped scenarioStepsTable" id="stepContainer23">
 
      </table>
     </td>
@@ -419,7 +419,7 @@
 
    <tr>
     <td>
-     <p class="scenarioSuccess" onclick="showHide('24', this)">[+] test it skips loaded package (0.02s)</p>
+     <p class="scenarioSuccess" onclick="showHide('24', this)">[+] test it skips loaded package (0.03s)</p>
     </td>
    </tr>
    <tr>
@@ -445,7 +445,7 @@
 
    <tr>
     <td>
-     <p class="scenarioSuccess" onclick="showHide('26', this)">[+] test package returns its name and version (0s)</p>
+     <p class="scenarioSuccess" onclick="showHide('26', this)">[+] test package returns its name and version (0.01s)</p>
     </td>
    </tr>
    <tr>
@@ -464,7 +464,7 @@
       <table border="0">
        <tr>
         <td width="250" class="scenarioSuccess">Successful scenarios:</td>
-        <td class="scenarioSuccessValue"><strong>26</strong></td>
+        <td class="scenarioSuccessValue"><strong>19</strong></td>
        </tr>
        <tr>
         <td class="scenarioFailed">Failed scenarios:</td>
@@ -472,7 +472,7 @@
        </tr>
        <tr>
         <td class="scenarioSkipped">Skipped scenarios:</td>
-        <td class="scenarioSkippedValue"><strong>0</strong></td>
+        <td class="scenarioSkippedValue"><strong>7</strong></td>
        </tr>
        <tr>
         <td class="scenarioIncomplete">Incomplete scenarios:</td>
